# Integr8sCode

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE_IN_DETAILS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  deploy.sh  docker-bake.hcl  docker-compose.ci.yaml  docker-compose.yaml  mkdocs.yml  tests.md  unlike.md
backend/: .dockerignore  .env  .env.test  .trivyignore  Dockerfile  Dockerfile.base  Dockerfile.test  HOW_TO_DEPLOY_K8S_TO_DigOcean.md  README.md  backend-deployment.yaml  backend-service.yaml  config.coordinator.toml  config.dlq-processor.toml  config.event-replay.toml  config.k8s-worker.toml  config.pod-monitor.toml  config.result-processor.toml  config.saga-orchestrator.toml  config.test.toml  config.toml  di_lifecycle_refactor_plan.md  docker-compose.yaml  kubeconfig.yaml  mongo-deployment.yaml  mongo-service.yaml  openssl.cnf  otel-collector-config.yaml  pyproject.toml  rbac.yaml  requirements-dev.txt  requirements.txt  secrets.example.toml  service-account.yaml  test_api.http  vulture_whitelist.py
backend/alertmanager/: alertmanager.yml
backend/app/: config.py  main.py  runtime_registry.py  settings.py
backend/app/api/: dependencies.py  rate_limit.py
backend/app/core/: adaptive_sampling.py  cache_middleware.py  container.py  correlation.py  database_context.py  dishka_lifespan.py  exceptions.py  execution.py  k8s_clients.py  lifecycle.py  logging.py  metrics.py  middleware.py  providers.py  security.py  service_dependencies.py  startup.py  tracing.py  utils.py
backend/app/db/: __init__.py  mongodb.py
backend/app/dlq/: __init__.py  consumer.py  health_check.py  manager.py  models.py
backend/app/domain/: __init__.py  exceptions.py
backend/app/events/: __init__.py  admin_utils.py  broker.py  consumer_group_monitor.py  event_store.py  event_store_consumer.py  handlers.py  metadata.py
backend/app/models/: execution.py  saved_script.py  user.py
backend/app/schemas/: execution.py  saved_script.py  user.py
backend/app/schemas_avro/: __init__.py  event_schemas.py
backend/app/schemas_pydantic/: admin_events.py  admin_executions.py  admin_settings.py  admin_user_overview.py  alertmanager.py  common.py  dlq.py  error_types.py  event_schemas.py  events.py  execution.py  grafana.py  health.py  health_dashboard.py  kafka_metrics.py  notification.py  projections.py  replay.py  replay_models.py  replay_schemas.py  replays.py  saga.py  saved_script.py  sse.py  user.py  user_settings.py  websocket.py
backend/app/scripts/: entrypoint.py  entrypoint.sh
backend/app/services/: admin_user_service.py  auth_service.py  circuit_breaker.py  event_buffer.py  event_bus.py  event_projections.py  event_service.py  execution_orchestrator.py  execution_queue.py  execution_service.py  grafana_alert_processor.py  health_service.py  k8s_engine.py  kafka_event_service.py  kubernetes_service.py  login_lockout.py  network_policy.py  notification_scheduler.py  notification_service.py  pod_manifest_builder.py  rate_limit_service.py  replay_service.py  runtime_settings.py  saga_service.py  saved_script_service.py  sse_connection_manager.py  sse_shutdown_manager.py  user_settings_service.py
backend/app/websocket/: __init__.py  auth.py  connection_manager.py  event_handler.py  metrics.py
backend/certs/: server.ext
backend/docs/: api-reference.md  cpu-time-measurement.md  dead-letter-queue.md  kafka-topic-architecture.md  lifecycle.md  metrics-contextvars.md  notification-types.md  schema-manager.md  services-overview.md  sse-partitioned-architecture.md  tracing.md
backend/docs/security/: policies.md
backend/docs/workers/: pod_monitor.md  result_processor.md
backend/grafana/: grafana.ini
backend/help_docs/: HOW_TO_DEPLOY_K8S_TO_DigOcean.md  SETTING_UP_TLS_SSL_HTTPS.md  UPDATE_DOCKER_IMAGE_AND_STUFF_IN_CLUSTER.md
backend/loki/: loki-config.yaml
backend/prometheus/: alert_rules.yml  prometheus.yml
backend/scripts/: check_orphan_modules.py  create_admin_user.py  create_topics.py  reset_consumer_offsets.py  seed_users.py
backend/tests/: .env.test  conftest.py  pytest.ini  test_app.py
backend/tests/contract/: test_grafana_metrics.py
backend/tests/e2e/: conftest.py  test_admin_events_routes.py  test_admin_executions_routes.py  test_admin_routes.py  test_admin_settings_routes.py  test_admin_users_routes.py  test_alertmanager.py  test_auth_routes.py  test_dlq_routes.py  test_events_routes.py  test_execution_routes.py  test_grafana_alerts_routes.py  test_health_routes.py  test_k8s_worker_create_pod.py  test_notifications_routes.py  test_replay_routes.py  test_resource_cleaner.py  test_resource_cleaner_k8s.py  test_resource_cleaner_orphan.py  test_saga_routes.py  test_saved_scripts_routes.py  test_sse_routes.py  test_user_settings_routes.py
backend/tests/fixtures/: real_services.py
backend/tests/helpers/: __init__.py  auth.py  cleanup.py  events.py  eventually.py  k8s_fakes.py  kafka.py  polling.py  protocols.py  sse.py
backend/tests/integration/: conftest.py  test_admin_routes.py  test_alertmanager.py  test_api_endpoints.py  test_auth.py  test_auth_api.py  test_auth_routes.py  test_dlq_routes.py  test_events_routes.py  test_execution.py  test_execution_api.py  test_execution_routes.py  test_health_api.py  test_health_routes.py  test_notifications_routes.py  test_replay_routes.py  test_saga_routes.py  test_saved_scripts_api.py  test_saved_scripts_routes.py  test_sse_routes.py  test_user_settings_routes.py
backend/tests/load/: README.md  __init__.py  cli.py  config.py  http_client.py  locustfile.py  monkey_runner.py  plot_report.py  (+7 more)
backend/workers/: Dockerfile.coordinator  Dockerfile.dlq_processor  Dockerfile.event_replay  Dockerfile.k8s_worker  Dockerfile.pod_monitor  Dockerfile.result_processor  Dockerfile.saga_orchestrator  __init__.py  bootstrap.py  dlq_processor.py  requirements.txt  run_coordinator.py  run_dlq_processor.py  run_event_replay.py  run_k8s_worker.py  run_pod_monitor.py  run_result_processor.py  run_saga_orchestrator.py  run_sse_bridge.py
backend/zookeeper/: Dockerfile.certgen  generate-certs.sh
(+956 files in other folders)
