[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

# Ruff configuration
[tool.ruff]
lint.select = ["E", "F", "B", "I", "W"]
lint.ignore = ["W293","B904"]
line-length = 120
target-version = "py312"
src = ["app"]
exclude = [
    "tests",
    "grafana",
    "prometheus",
    "**/venv/**",
    "**/.venv/**",
    "**/site-packages/**",
    "**/.claude/**"
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Query", "fastapi.params.Query"]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

# MyPy configuration
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disable_error_code = ["import-untyped", "import-not-found"]
# TODO: REMOVE NEXT LINE
exclude = '(^tests/|/tests/)'

# Pytest configuration
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "slow: marks tests as slow running",
    "kafka: marks tests as requiring Kafka",
    "mongodb: marks tests as requiring MongoDB",
    "k8s: marks tests as requiring Kubernetes",
    "performance: marks tests as performance tests"
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
log_cli = true
log_cli_level = "INFO"
# Run tests in parallel by default; distribute by file to minimize contention
addopts = "-n auto --dist loadfile"
