[project]
name = "integr8scode"
version = "0.1.0"
description = "Run Python scripts online in isolated Kubernetes pods"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "aiosmtplib==3.0.2",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asgiref==3.11.0",
    "async-timeout==5.0.1",
    "attrs==25.3.0",
    "avro-python3==1.10.2",
    "backoff==2.2.1",
    "blinker==1.9.0",
    "Brotli==1.2.0",
    "cachetools==6.2.4",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "ConfigArgParse==1.7.1",
    "aiokafka==0.13.0",
    "python-schema-registry-client==2.6.1",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "Deprecated==1.2.14",
    "dishka==1.6.0",
    "dnspython==2.7.0",
    "durationpy==0.9",
    "email-validator==2.3.0",
    "exceptiongroup==1.2.2",
    "fastapi==0.128.0",
    "fastavro==1.12.1",
    "fonttools==4.61.1",
    "frozenlist==1.7.0",
    "google-auth==2.47.0",
    "googleapis-common-protos==1.70.0",
    "greenlet==3.3.0",
    "grpcio==1.76.0",
    "gunicorn==23.0.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "importlib-metadata==6.11.0",
    "importlib-resources==6.5.2",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "kiwisolver==1.4.9",
    "kubernetes==31.0.0",
    "limits==5.6.0",
    "markdown-it-py==4.0.0",
    "MarkupSafe==3.0.2",
    "mdurl==0.1.2",
    "msgpack==1.1.0",
    "multidict==6.7.0",
    "oauthlib==3.3.1",
    "opentelemetry-api==1.22.0",
    "opentelemetry-exporter-otlp==1.22.0",
    "opentelemetry-exporter-otlp-proto-common==1.22.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.22.0",
    "opentelemetry-exporter-otlp-proto-http==1.22.0",
    "opentelemetry-exporter-prometheus==0.43b0",
    "opentelemetry-instrumentation==0.43b0",
    "opentelemetry-instrumentation-asgi==0.43b0",
    "opentelemetry-instrumentation-fastapi==0.43b0",
    "opentelemetry-instrumentation-httpx==0.43b0",
    "opentelemetry-instrumentation-logging==0.43b0",
    "opentelemetry-instrumentation-pymongo==0.43b0",
    "opentelemetry-instrumentation-redis==0.43b0",
    "opentelemetry-propagator-b3==1.22.0",
    "opentelemetry-proto==1.22.0",
    "opentelemetry-sdk==1.22.0",
    "opentelemetry-semantic-conventions==0.43b0",
    "opentelemetry-util-http==0.43b0",
    "packaging==24.1",
    "beanie==2.0.1",
    "passlib==1.7.4",
    "pathspec==0.12.1",
    "prometheus-fastapi-instrumentator==7.0.0",
    "prometheus_client==0.21.0",
    "propcache==0.3.2",
    "protobuf==4.25.8",
    "psutil==6.1.0",
    "pyasn1==0.6.2",
    "pyasn1_modules==0.4.2",
    "pydantic==2.9.2",
    "pydantic-avro==0.9.1",
    "pydantic-settings==2.5.2",
    "pydantic_core==2.23.4",
    "Pygments==2.19.2",
    "PyJWT==2.9.0",
    "pymongo==4.12.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "python-json-logger==2.0.7",
    "python-multipart==0.0.18",
    "PyYAML==6.0.2",
    "pyzmq==26.2.0",
    "redis==7.1.0",
    "regex==2025.8.29",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "rich==14.2.0",
    "rsa==4.9",
    "six==1.16.0",
    "slowapi==0.1.9",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "sse-starlette==2.2.1",
    "starlette==0.49.1",
    "tiktoken==0.11.0",
    "tomli==2.0.2",
    "typing_extensions==4.12.2",
    "urllib3==2.6.3",
    "uvicorn==0.34.2",
    "websocket-client==1.8.0",
    "Werkzeug==3.1.5",
    "wrapt==1.16.0",
    "yarl==1.20.1",
    "zipp==3.20.2",
    "monggregate==0.22.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "workers"]

[dependency-groups]
dev = [
    "async-asgi-testclient>=1.4.11",
    "coverage==7.13.0",
    "hypothesis==6.103.4",
    "iniconfig==2.3.0",
    "matplotlib==3.10.8",
    "mypy==1.19.1",
    "mypy_extensions==1.1.0",
    "pipdeptree==2.23.4",
    "pluggy==1.5.0",
    "pytest==8.4.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==5.0.0",
    "pytest-env==1.2.0",
    "pytest-xdist==3.6.1",
    "ruff==0.14.10",
    "types-cachetools==6.2.0.20250827",
]

# Ruff configuration
[tool.ruff]
lint.select = ["E", "F", "B", "I", "W"]
lint.ignore = ["W293","B904"]
line-length = 120
target-version = "py312"
src = ["app"]
exclude = [
    "tests",
    "grafana",
    "prometheus",
    "**/venv/**",
    "**/.venv/**",
    "**/site-packages/**",
    "**/.claude/**"
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Query", "fastapi.params.Query"]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

# MyPy configuration
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disable_error_code = ["import-untyped", "import-not-found"]
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# Pytest configuration
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "e2e: marks tests as end-to-end tests requiring full system",
    "unit: marks tests as unit tests",
    "slow: marks tests as slow running",
    "kafka: marks tests as requiring Kafka",
    "mongodb: marks tests as requiring MongoDB",
    "redis: marks tests as requiring Redis",
    "k8s: marks tests as requiring Kubernetes",
    "performance: marks tests as performance tests",
    "admin: marks tests as admin-only functionality tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
log_cli = false
log_cli_level = "ERROR"
log_level = "ERROR"
addopts = "--tb=short -n auto --dist=loadfile"

# pytest-env: Sets env vars before test execution
[tool.pytest_env]
OTEL_SDK_DISABLED = "true"  # Prevents teardown delays from OTLP exporter retries

# Coverage configuration
[tool.coverage.run]
# Use sysmon for faster coverage (requires Python 3.12+)
core = "sysmon"
